# Test-Unimore-Racing

./: CMakeLists.txt  README.md
demo/: demo.cpp
include/: Specs.h  imageEditing.h
src/: Specs.cpp  imageEditing.cpp
